commit al master del que de Freddy es el blogpost.

--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Prueba de Git reset y checkout</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='estilos_css/estils.css'>
+    <link rel='stylesheet'
+     href='estilos_css/estilos.css'>
     <script src='main.js'></script>
 </head>
 <body>
-    <p>La pitufa Ale xDD</p>
+    <div="container">
+    <div id="post">
+        <h1>EEEEEEH MESSI</h1>
+    <p>Hola a mi</p>
 </body>
 </html>
