comenzamos a usar la cabecera

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
     <div="container">
     <div id="post">
+        <br></br>
+    <div="cabecera" >
+        La cabecera comienza aqui.
+
         <h1>EEEEEEH MESSI</h1>
     <p>Hola a mi</p>
 </body>
