--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div="container">
     <div id="post">
         <br></br>
-    <div="cabecera" >
+    <div id="cabecera" >
         La cabecera comienza aqui.
+        ahora estamos probando a editar y "dejar bonita" la cabecera para luego probar y unirlo con la rama Master, inteligente,no?</div>
 
         <h1>EEEEEEH MESSI</h1>
     <p>Hola a mi</p>
