usamos el texyo de Lorem

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <div id="post">
         <h1>EEEEEEH MESSI</h1>
     <p>Hola a mi</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam earum assumenda odio dolorum officia culpa aut exercitationem aliquid laudantium dolor similique ex fugiat possimus ducimus temporibus, tempore repellat architecto quas?</p>
 </body>
 </html>
