--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <br></br>
     <div id="cabecera" >
         La cabecera comienza aqui.
-        ahora estamos probando a editar y "dejar bonita" la cabecera para luego probar y unirlo con la rama Master, inteligente,no?</div>
-
+        ahora estamos probando a editar y "dejar bonita" la cabecera para luego probar y unirlo con la rama Master,generando un conflicto?</div>
+        
         <h1>EEEEEEH MESSI</h1>
     <p>Hola a mi</p>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam earum assumenda odio dolorum officia culpa aut exercitationem aliquid laudantium dolor similique ex fugiat possimus ducimus temporibus, tempore repellat architecto quas?</p>
