dije que doy clases los jueves y tambien modifique las mismas lineas que en la cabecera

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <br></br>
     <div id="cabecera" >
         La cabecera comienza aqui.
-        ahora estamos probando a editar y "dejar bonita" la cabecera para luego probar y unirlo con la rama Master, inteligente,no?</div>
+        ahora estamos probando a modificar las mismas linea que la cabecera para generar conflicto y solucionarlo.</div>
+
+        Doy clases los jueves xD
 
         <h1>EEEEEEH MESSI</h1>
     <p>Hola a mi</p>
