--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+ rep<!DOCTYPE html>
 <html>
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Prueba de Git reset y checkout</title>
+    <title>Bienvenido al repositorio con Github</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet'
      href='estilos_css/estilos.css'>
